--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@
         <section>
     <h1>DOG is Better or Cat?</h1>
     <h2>Dog</h2>
+          <img src="images/dog.jpg" alt="dog">  
     <p>
         Dog owners generally have a stronger immune system, helping them to stay well and spend less time getting over sickness and bugs. ...
-        <br><br>
-         Dogs provide us with a sense of emotional wellbeing thanks to the unconditional love they give, which is why they're also great company and comfort for people who live alone.
-        <br><br>
-        Thats why dog is better than cat.
         <br>
+         Dogs provide us with a sense of emotional wellbeing thanks to the unconditional love they give, which is why they're also great company and comfort for people who live alone.
+        <br>
+        On the other hand, Dogs are the best because, unlike people (and most cats), they love you unconditionally. ... 
+        <br>
+         Dogs are willing to put aside their differences and live in peace, even with their natural-born enemies. Owning a dog can help kids learn about responsibility and empathy. They love to snuggle and they're the best at it.
+        <br>
+        Thats why dog is better than cat.
+        <br><br>
         Author: Sahar MahmoudiMotlagh
     </p>
 </section>
