--- a/index.html
+++ b/index.html
@@ -9,24 +9,42 @@
 </head>
 <body>
     <main>
+        <h1 style="color: #5e9ca0;"><span style="color: #ff6600;">Topic: Dogs or Cats,Which one is better?</span></h1>
+        <h3><span style="color: #333333;">Proposition: <span style="color: #3366ff;">Dogs are better.</span></span></h3>
+        <h3><span style="color: #333333;">Opposition: <span style="color: #3366ff;">Cats are better.&nbsp;</span></span></h3>
+
         <section>
     <h1>DOG is Better or Cat?</h1>
     <h2>Dog</h2>
-          <img src="images/dog.jpg" alt="dog">  
     <p>
         Dog owners generally have a stronger immune system, helping them to stay well and spend less time getting over sickness and bugs. ...
-        <br>
-         Dogs provide us with a sense of emotional wellbeing thanks to the unconditional love they give, which is why they're also great company and comfort for people who live alone.
-        <br>
-        On the other hand, Dogs are the best because, unlike people (and most cats), they love you unconditionally. ... 
-        <br>
-         Dogs are willing to put aside their differences and live in peace, even with their natural-born enemies. Owning a dog can help kids learn about responsibility and empathy. They love to snuggle and they're the best at it.
-        <br>
-        Thats why dog is better than cat.
         <br><br>
+         Dogs provide us with a sense of emotional wellbeing thanks to the unconditional love they give, which is why they're also great company and comfort for people who live alone.
+        <br><br>
+        Thats why dog is better than cat.
+        <br>
         Author: Sahar MahmoudiMotlagh
     </p>
 </section>
+
+
+ <!--this is Aixin Zhong Section-->
+    <section>
+        <h1><span style="color: #333333;">Cat</span></h1>
+        <p>Hello! Cats or dogs, as long as they have been domesticated our population has been divided into those that prefer cats and those that prefer dogs. However, there are three reasons why cats make better pets.</p>
+        <p>First, cats are quiet. If noise levels are a concern in people's living situation, cats are a great choice of pet. Even the quietest bark will likely be much louder than the most insistent meowing. Compared to cats, people may need to worry about dogs' sounds such as them barking loudly to strangers or running around at top speed.</p>
+        <p>Second, cats are low maintainance. Compared to dogs, cats are a low maintenance pet. They don't require formal training, they don't need to be taken out multiple times a day, and they are even able to take care of basic self-cleaning. Of course, long-haired cats will still require regular grooming, but it will likely involve less regular grooming than long-haired dogs.</p>
+        <p>Finally, cats are independent. One of the best things about cats is that they are very independent creatures. Unlike dogs, who require quite a high level of attention each day, cats are quite happy to have time to themselves. When you are home, cats are also more likely to be content with just being in your company, whereas dogs may demand people's undivided attention.</p>        
+        <p>In conclusion, I believe cats are better pets than dogs.</p>
+        Aixin Zhong
+        <a href="https://www.petmd.com/sites/default/files/styles/article_image/public/orange-tabby-kitten-walking-across-floor.jpg?itok=ApRxY9_r">more cat image click here
+        <img src="https://www.prestigeanimalhospital.com/sites/default/files/interesting-cat-facts.jpg">
+        </a>
+
+
+
+
+    </section>
 </main>
 </body>
 </html>
