--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
          Dogs provide us with a sense of emotional wellbeing thanks to the unconditional love they give, which is why they're also great company and comfort for people who live alone.
         <br>
         <br>
-        Dogs are the best because, unlike people (and most cats), they love you unconditionally....
+        Dogs are the best because, unlike people (and most cats), they love you unconditionally......
         <br>
          On the other hand, dogs are willing to put aside their differences and live in peace, even with their natural-born enemies. Owning a dog can help kids learn about responsibility and empathy. They love to snuggle and they're the best at it.
          <br>
